# tox-prpl

./: CMakeLists.txt  TODO
cmake/: FindLibPurple.cmake  FindLibtox.cmake
include/: toxprpl.h  toxprpl_data.h
include/toxprpl/: account.h  buddy.h  group_chat.h  preferences.h  protocol.h  xfers.h
src/: toxprpl.c  util.c
src/common/: group_chat.c  xfers.c
src/impl/: xfers.c
src/purple/: account.c  buddy.c  chat.c  commands.c  preferences.c  xfers.c
src/tox/: buddy.c  chat.c  group_chat.c  xfers.c
